--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap");
+
 body {
-  margin: 0;
-  font-family: 'Quicksand', sans-serif;
+  font-size: 14px;
+  margin: 0px;
+  font-family: "Quicksand", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -8,4 +11,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.centered-text {
+  text-align: center;
 }
