--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 
-@import "styles/base";
+@import "./styles/base";
 
 $vertical-padding: 1rem;
 $horizontal-padding: 4rem;
@@ -29,12 +29,12 @@ $horizontal-padding: 4rem;
         padding-bottom: $vertical-padding;
         .title-divider {
           width: 40px;
-          height: 6px;
+          height: 5px;
           background-color: #3ab6d7;
         }
         .form {
           box-sizing: border-box;
-          padding-top: 4em;
+          padding-top: 3em;
           width: 100%;
           height: 100%;
           overflow: scroll;
