--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,6 +1,10 @@
 $primary-color: #FF0049;
 $secondary-color: #002B45;
+$secondary-light-color: rgba($secondary-color, 0.5);
 $terciary-color: #FFF1E5;
 
 $white: #FFFFFF;
 $black: #000000;
+$light-grey: rgb(233, 231, 231);
+$grey: rgb(185, 185, 185);
+$red: red;
