Últimos cambios en la App

--- a/src/views/FormPassword/FormPassword.scss
+++ b/src/views/FormPassword/FormPassword.scss
@@ -1,3 +1,5 @@
+@import "../../styles/base";
+
 .PasswordCreationForm {
   display: flex;
   flex-direction: column;
@@ -8,5 +10,40 @@
     column-gap: 30px;
     row-gap: 20px;
     flex-wrap: wrap;
+  }
+  .info-icon {
+    margin-left: 10px;
+    height: 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    &:hover {
+      background-color: rgba(128, 128, 128, 0.288);
+    }
+  }
+  .extra-info {
+    box-sizing: border-box;
+    position: absolute;
+    display: flex;
+    padding: 10px;
+    left: 50%;
+    max-width: 25%;
+    background-color: $light-grey;
+    border: 1px;
+    border-style: solid;
+    button.hide-extra-info {
+      box-sizing: border-box;
+      background-color: $grey;
+      width: 5px !important;
+      height: 5px;
+      padding: 10px;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      border-style: solid;
+      border-radius: 5px;
+    }
+  }
+  .clue-length-indicator {
+    text-align: right;
   }
 }
